--- a/.github/workflows/fe-vrt.yml
+++ b/.github/workflows/fe-vrt.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   vrt:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.9.1
@@ -46,11 +46,9 @@ jobs:
         if: steps.npm-cache.outputs.cache-hit != 'true'
         run: npm ci
 
-      - name: Install chrome
-        run: npx puppeteer browsers install chrome
-
       - name: Helles UI Visual Regression Testing
         run: npx nx run helles-ui:vrt
+        continue-on-error: true
         env:
           WAIT_ON_TIMEOUT: 600000
 
