--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -43,6 +43,8 @@ jobs:
         run: npx cypress install
 
       - name: Affected Regression Tests
+        id: regressionTests
+        continue-on-error: true
         uses: collaborationFactory/github-actions/.github/actions/run-many@master
         with:
           target: ${{ matrix.target }}
@@ -71,3 +73,10 @@ jobs:
           path: |
             dist/cypress/apps/**/a11y/html/
           retention-days: 3
+
+      - name: Fail pipeline if regressionTests step failed
+        run: |
+          if [ "${{ steps.regressionTests.outcome }}" = "failure" ]; then
+            echo "Regression tests step failed, failing the pipeline."
+            exit 1
+          fi
