Update CI configuration to improve unit test execution and add new code quality workflow
(cherry picked from commit 26608cac807244512faeb33ebd5ab113036ad2a8)

--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -34,10 +34,4 @@ jobs:
         run: npx nx affected --target=lint --parallel --configuration=dev --base=origin/${{ github.event.pull_request.base.ref }}
 
       - name: Unit Tests
-        uses: collaborationFactory/github-actions/.github/actions/run-many@master
-        with:
-          target: ${{ matrix.target }}
-          jobIndex: ${{ matrix.jobIndex }}
-          jobCount: ${{ env.jobCount }}
-          base: ${{ github.event.pull_request.base.ref }}
-          ref: ${{ github.event.pull_request.head.ref }}
+        run: npx nx affected --target=test --parallel --maxParallel=1 --base=origin/${{ github.event.pull_request.base.ref }} --shard=${{ matrix.jobIndex }}/${{ env.jobCount }}
