--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -34,4 +34,4 @@ jobs:
         run: npx nx affected --target=lint --parallel --configuration=dev --base=origin/${{ github.event.pull_request.base.ref }}
 
       - name: Unit Tests
-        run: npx nx affected --target=test --parallel --maxParallel=1 --base=origin/${{ github.event.pull_request.base.ref }} --shard=${{ matrix.jobIndex }}/${{ env.jobCount }}
+        run: npx nx affected --target=test,test:table,test:components,test:others --parallel --maxParallel=1 --base=origin/${{ github.event.pull_request.base.ref }} --shard=${{ matrix.jobIndex }}/${{ env.jobCount }}
