--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Install Cypress Binary
         run: npx cypress install
 
+      - name: Fetch base branch
+        run: git fetch origin ${{ inputs.GHA_BASE }}:${{ inputs.GHA_BASE }} || true
+
       - name: Affected Regression Tests
         id: regressionTests
         continue-on-error: true
