--- a/.github/workflows/fe-build.yml
+++ b/.github/workflows/fe-build.yml
@@ -44,7 +44,7 @@ jobs:
         run: git fetch origin ${{ inputs.GHA_BASE }}:${{ inputs.GHA_BASE }} || true
 
       - name: Build and Storybook
-        uses: collaborationFactory/github-actions/.github/actions/run-many@master
+        uses: collaborationFactory/github-actions/.github/actions/run-many@feature/PFM-TASK-6575-Adjust-build-to-release-e2e-apps-
         with:
           target: ${{ matrix.target }}
           jobIndex: ${{ matrix.jobIndex }}
