--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Affected Regression Tests
         id: regressionTests
         continue-on-error: true
-        uses: collaborationFactory/github-actions/.github/actions/run-many@master
+        uses: collaborationFactory/github-actions/.github/actions/run-many@feature/PFM-TASK-6575-Adjust-build-to-release-e2e-apps-
         with:
           target: ${{ matrix.target }}
           jobIndex: ${{ matrix.jobIndex }}
