--- a/.github/workflows/fe-tag.yml
+++ b/.github/workflows/fe-tag.yml
@@ -48,7 +48,7 @@ jobs:
           git config user.email ${{ secrets.GIT_USER_EMAIL }}
 
       - name: Bump Version and Push new Tag
-        uses: collaborationFactory/github-actions/.github/actions/artifacts@master
+        uses: collaborationFactory/github-actions/.github/actions/artifacts@feature/PFM-TASK-6575-Adjust-build-to-release-e2e-apps-
         env:
           JFROG_BASE64_TOKEN: ${{ secrets.JFROG_BASE64_TOKEN }}
           JFROG_URL: ${{ secrets.JFROG_URL }}
