--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -46,6 +46,9 @@ jobs:
           base: ${{ github.event.pull_request.base.ref }}
           ref: ${{ github.event.pull_request.head.ref }}
 
+      - name: Merge Coverage Reports
+        run: ./node_modules/.bin/lcov-result-merger 'coverage/libs/**/lcov.info' 'coverage/lcov.info'
+
       - name: Upload Coverage Reports
         uses: actions/upload-artifact@v4
         with:
@@ -53,3 +56,23 @@ jobs:
           path: |
             coverage/
           retention-days: 7
+
+  sonar:
+    name: SonarCloud
+    needs: code-quality
+    runs-on: ubuntu-latest
+    steps:
+      - name: download source
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: download coverage report
+        uses: actions/download-artifact@v3
+        with:
+          name: coverage-report
+          path: coverage
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
