Update coverage report merging command to use npx for improved execution

--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -47,7 +47,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Merge Coverage Reports
-        run: ./node_modules/.bin/lcov-result-merger 'coverage/libs/**/lcov.info' 'coverage/lcov.info'
+        run: npx lcov-result-merger 'coverage/libs/**/lcov.info' 'coverage/lcov.info'
 
       - name: Upload Coverage Reports
         uses: actions/upload-artifact@v4
