--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Upload Coverage Reports
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-reports
+          name: coverage-reports-${{ matrix.jobIndex }}
           path: |
             coverage/
           retention-days: 7
@@ -69,8 +69,7 @@ jobs:
       - name: download coverage report
         uses: actions/download-artifact@v3
         with:
-          name: coverage-report
-          path: coverage
+          name: coverage-reports-1
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
