--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -62,7 +62,7 @@ jobs:
     needs: code-quality
     runs-on: ubuntu-latest
     steps:
-      - name: download source
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -75,6 +75,8 @@ jobs:
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Install Dependencies
+        run: npm ci
       - name: download coverage report
         uses: actions/download-artifact@v5
         with:
