--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -72,6 +72,8 @@ jobs:
           path: coverage/matrix/
           pattern: coverage-reports-*
           merge-multiple: true
+      - name: Display structure of downloaded files
+        run: ls -R coverage/matrix/
       - name: Install lcov-result-merger
         run: npm install -g lcov-result-merger
       - name: Merge matrix coverage reports
