--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "29.5.14",
     "@types/node": "^22.15.0",
     "jest": "29.7.0",
+    "jest-junit": "^16.0.0",
     "lcov-result-merger": "^5.0.1",
     "luxon": "^3.3.0",
     "prettier": "2.8.1",
