--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -37,8 +37,11 @@ jobs:
       - name: Fetch base branch
         run: git fetch origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }} || true
 
-      - name: Install lcov-result-merger and jest-junit
-        run: npm install -g lcov-result-merger@5.0.1 jest-junit@16.0.0
+      - name: Install lcov-result-merger
+        run: npm install -g lcov-result-merger
+
+      - name: Install jest-junit
+        run: npm install -g jest-junit
 
       - name: Unit Tests
         uses: collaborationFactory/github-actions/.github/actions/run-many@poc/code-coverage-in-code-quality-pr-pipeline
