--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -50,7 +50,7 @@ jobs:
         run: find coverage/ -name "*.info"
 
       - name: Merge Coverage Reports
-        run: npx lcov-result-merger 'coverage/libs/**/lcov.info' 'merger-coverage/lcov-${{ matrix.jobIndex }}.info'
+        run: mkdir -p merger-coverage && npx lcov-result-merger 'coverage/libs/**/lcov.info' 'merger-coverage/lcov-${{ matrix.jobIndex }}.info'
       - name: Display structure of merged files
         run: find merger-coverage/ -name "*.info"
 
