Enhance SonarQube integration by adding environment variable loading and project properties generation

--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -81,8 +81,41 @@ jobs:
         run: find merger-coverage/ -name "*.info"
       - name: Merge matrix coverage reports
         run: mkdir -p coverage/overall && npx lcov-result-merger 'merger-coverage/**/lcov.info' 'coverage/overall/lcov.info'
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
+
+      - name: Load environment variables
+        uses: collaborationFactory/cplace-gh-workflows/.github/actions/load-env-variables@release/1.0
+        with:
+          secrets: ${{ toJson(secrets) }}
+          vars: ${{ toJson(vars) }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPO_NAME: '.'
+
+      - name: Create sonar-project.properties
+        id: sonar_generate_properties
+        run: .github/scripts/sonar_generate_properties.sh
+        env:
+          REPO_NAME: ${{ github.event.repository.name }}
+          SONAR_QUALITYGATE_TIMEOUT: ${{ env.CB_SONAR_QUALITYGATE_TIMEOUT }}
+          SONAR_QUALITYGATE_WAIT: ${{ env.CB_SONAR_QUALITYGATE_WAIT }}
+          SONAR_VERBOSE: ${{ env.CB_SONAR_VERBOSE }}
+          SONAR_PROJECT_KEY: ${{ inputs.sq_project_key }}
+          SONAR_UPDATE_BASE_LINE: ${{ inputs.sq_update_base_line }}
+
+      - name: Dump sonar-project.properties
+        if: ${{ inputs.enable_trace_log == 'true' }}
+        run: cat sonar-project.properties
+
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@v4
+        env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ env.CB_SONAR_HOST_URL }}
+
+      - name: Set baseline for sonar scan
+        if: always() &&  inputs.sq_update_base_line == 'true'
+        uses: collaborationFactory/cplace-gh-workflows/.github/actions/sonar-pin-baseline@release/1.0
+        with:
+          sonar_token: ${{ secrets.SONAR_TOKEN }}
+          sonar_host_url: ${{ env.CB_SONAR_HOST_URL }}
+          project_key: ${{ env.PROJECT_KEY }}
+          project_version: ${{ env.PROJECT_VERSION }}
