Update coverage artifact path in code quality workflow

--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -53,5 +53,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-${{ matrix.jobIndex }}
-          path: merger-coverage/
+          path: coverage/
           retention-days: 7
