--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -55,3 +55,10 @@ jobs:
           name: coverage-${{ matrix.jobIndex }}
           path: coverage/
           retention-days: 7
+
+      - name: Upload Junit Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: junit-${{ matrix.jobIndex }}
+          path: reports/
+          retention-days: 7
