--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -55,3 +55,62 @@ jobs:
           name: coverage-${{ matrix.jobIndex }}
           path: coverage/
           retention-days: 7
+
+  sonar:
+    name: SonarCloud
+    needs: code-quality
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: download coverage report
+        uses: actions/download-artifact@v5
+        with:
+          path: coverage/
+          pattern: coverage-*
+          merge-multiple: true
+
+      - name: download junit report
+        uses: actions/download-artifact@v5
+        with:
+          path: reports/
+          pattern: junit-*
+          merge-multiple: true
+
+      - name: Display structure of downloaded files
+        run: find coverage/ -name "*.info"
+
+      - name: Merge matrix coverage reports
+        run: npx lcov-result-merger ./coverage/**/lcov*.info ./coverage/lcov.info
+
+      - name: Normalize LCOV paths for Linux
+        run: |
+          if [ -f "./coverage/lcov.info" ]; then
+            sed -i 's|\\|/|g' ./coverage/lcov.info
+            echo "Normalized LCOV paths to Unix format"
+          fi
+
+      - name: Upload Coverage Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage
+          path: coverage/
+          retention-days: 7
+
+      - name: Upload Junit Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: reports
+          path: reports/
+          retention-days: 7
+
+      - name: Dump sonar-project.properties
+        run: cat sonar-project.properties
+
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v4
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_CLOUD_TOKEN }}
