--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -1,7 +1,10 @@
 name: Frontend Code Quality Workflow
 
-on: workflow_call
-
+on:
+  workflow_call:
+    secrets:
+      SONAR_CLOUD_TOKEN:
+        required: false
 jobs:
   code-quality:
     runs-on: ubuntu-latest
@@ -60,6 +63,7 @@ jobs:
     name: SonarCloud
     needs: code-quality
     runs-on: ubuntu-latest
+    if: ${{ secrets.SONAR_CLOUD_TOKEN != '' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
