--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -5,15 +5,19 @@ on:
     secrets:
       SONAR_CLOUD_TOKEN:
         required: false
+    inputs:
       SONAR_CLOUD_ORG:
         required: false
         description: "SonarCloud organization key, e.g., 'my-org'"
+        type: string
       SONAR_CLOUD_PROJECT_KEY:
         required: false
         description: "SonarCloud project key, e.g., 'my-project'"
+        type: string
       SONAR_PROPERTIES:
         required: false
         description: "Additional sonar-project.properties content"
+        type: string
 
 jobs:
   code-quality:
@@ -98,8 +102,8 @@ jobs:
       - name: Write sonar-project.properties
         run: |
           echo "sonar.host.url=https://sonarcloud.io" > sonar-project.properties
-          echo "sonar.organization=${{ secrets.SONAR_CLOUD_ORG }}" >> sonar-project.properties
-          echo "sonar.projectKey=${{ secrets.SONAR_CLOUD_PROJECT_KEY }}" >> sonar-project.properties
+          echo "sonar.organization=${{ inputs.SONAR_CLOUD_ORG }}" >> sonar-project.properties
+          echo "sonar.projectKey=${{ inputs.SONAR_CLOUD_PROJECT_KEY }}" >> sonar-project.properties
           echo "sonar.sources=." >> sonar-project.properties
           echo "sonar.tests=." >> sonar-project.properties
           echo "sonar.test.inclusions=**/*.spec.ts,**/*.test.ts,**/*.spec.tsx,**/*.test.tsx" >> sonar-project.properties
@@ -107,8 +111,8 @@ jobs:
           echo "sonar.testExecutionReportPaths=./reports/**/junit.xml" >> sonar-project.properties
           echo "sonar.test.exclusions=**/node_modules/**,**/test/**" >> sonar-project.properties
           echo "sonar.verbose=true" >> sonar-project.properties
-          if [ -n "${{ secrets.SONAR_PROPERTIES }}" ]; then
-            echo "${{ secrets.SONAR_PROPERTIES }}" >> sonar-project.properties
+          if [ -n "${{ inputs.SONAR_PROPERTIES }}" ]; then
+            echo "${{ inputs.SONAR_PROPERTIES }}" >> sonar-project.properties
           fi
           cat sonar-project.properties
 
