--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -56,6 +56,7 @@ jobs:
 
       - name: Unit Tests
         uses: collaborationFactory/github-actions/.github/actions/run-many@poc/code-coverage-in-code-quality-pr-pipeline
+        continue-on-error: true
         with:
           target: ${{ matrix.target }}
           jobIndex: ${{ matrix.jobIndex }}
