Optimize npm installation steps in GitHub Actions workflows

--- a/.github/workflows/fe-build.yml
+++ b/.github/workflows/fe-build.yml
@@ -40,6 +40,9 @@ jobs:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
+      - name: npm ci
+        run: npm ci
+
       - name: Fetch base branch
         run: git fetch origin ${{ inputs.GHA_BASE }}:${{ inputs.GHA_BASE }} || true
 
